# rgbd_camera_ignition

./: CMakeLists.txt  README.md  package.xml  rgbd_camera_ignition.repos
launch/: rgbd_ignition.launch.py
rviz/: view_camera.rviz
urdf/: rgbd.gazebo.urdf.xacro  rgbd_macro.gazebo.urdf.xacro  test_rgbd.gazebo.urdf.xacro
worlds/: camera_test.sdf
